feat: add school model
