# src/controller/Login.Controller.ts
@@ -1,19 +1,51 @@
 import { writeJson } from '../utils/writer';
 import { LoginService } from '../service/Login.Service';
-import { InternalServerError } from '../utils/mensagens-ptbr';
+import {
+  Created,
+  InternalServerError,
+  Validacao,
+} from '../utils/mensagens-ptbr';
+import { Users } from '../Model/User.Model';
 
 const loginService = new LoginService();
 
-export async function LoginController(req: Request, res: Response) : Promise<boolean> {
+export async function loginController(
+  req: { body: { login: string; password: string } },
+  res: Express.Response,
+): Promise<boolean> {
   try {
-    const login = req.body.login;
-    const password = req.body.password;
+    const authentication: { login: string; password: string } = req.body;
 
-    const user = await loginService.loginUserService(login, password);
+    if (!authentication.login) {
+      return writeJson(res, Validacao.Login);
+    }
+    if (!authentication.password) {
+      return writeJson(res, Validacao.password);
+    }
+
+    const user = await loginService.loginUserService(
+      authentication.login,
+      authentication.password,
+    );
 
     return writeJson(res, user);
   } catch (e) {
-console.error(e);
-return writeJson(res, InternalServerError)
+    console.error(e);
+    return writeJson(res, InternalServerError);
+  }
+}
+export async function createUserController(
+  req: Request,
+  res: Response,
+): Promise<boolean> {
+  try {
+    const user = Users.build(req.body);
+
+    const newUser = loginService.createUser(user);
+
+    return writeJson(res, newUser, Created);
+  } catch (e) {
+    console.error(e);
+    return writeJson(res, InternalServerError);
   }
 }
