# src/routes/routes.ts
@@ -1,1 +1,9 @@
-export const controllers = {};
+import {
+  createUserController,
+  loginController,
+} from '../controller/Login.Controller';
+
+export const controllers = {
+  loginController,
+  createUserController,
+};
